--- a/src/storyblok/Grid.astro
+++ b/src/storyblok/Grid.astro
@@ -1,16 +1,14 @@
 ---
-import { storyblokEditable } from '@storyblok/astro'
-import StoryblokComponent from '@storyblok/astro/StoryblokComponent.astro'
+import { storyblokEditable } from '@storyblok/astro';
+import StoryblokComponent from '@storyblok/astro/StoryblokComponent.astro';
 
-const { blok } = Astro.props
+const { blok } = Astro.props;
 ---
 
 <div {...storyblokEditable(blok)}>
   <div class='container grid grid-cols-3 gap-12'>
-    {
-      blok.columns?.map((blok) => {
-        return <StoryblokComponent blok={blok} />
-      })
-    }
+    {blok.columns && blok.columns.map((b) => (
+      <StoryblokComponent blok={b} />
+    ))}
   </div>
 </div>
