--- a/src/storyblok/Teaser.astro
+++ b/src/storyblok/Teaser.astro
@@ -1,7 +1,7 @@
 ---
-import { storyblokEditable } from '@storyblok/astro'
+import { storyblokEditable } from '@storyblok/astro';
 
-const { blok } = Astro.props
+const { blok } = Astro.props;
 ---
 
 <div {...storyblokEditable(blok)}>
