add Page Title component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,10 @@ const { data } = await sbApi.get('cdn/stories/home', {
 })
 
 const story = data.story
+
+// TODO perhaps we can just import all components that are stored in one folder on Storyblok,
+// and map through that to present all images. Perhaps through graphQl?
+// This way we don't need to use the Grid inside Page, but define our own Astro component.
 ---
 
 <BaseLayout>
