--- a/src/storyblok/ImagesGrid.astro
+++ b/src/storyblok/ImagesGrid.astro
@@ -7,8 +7,7 @@ import ImagePost from './ImagePost.astro';
 const storyblokApi = useStoryblokApi();
 
 const { data } = await storyblokApi.get('cdn/stories', {
-  // version: import.meta.env.DEV ? "draft" : "published",
-  version: 'draft',
+  version: import.meta.env.DEV ? 'draft' : 'published',
   content_type: 'imagePost',
 });
 
