--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,13 +1,18 @@
+---
+import Navbar from '../storyblok/Navbar.astro';
+---
+
 <!DOCTYPE html>
 <html lang='en'>
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-    <title>@storyblok/astro</title>
+    <title>Virginia Vidonis Art</title>
   </head>
 
   <body>
+    <Navbar />
     <slot />
   </body>
 </html>
