--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Navbar from '../storyblok/Navbar.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <!DOCTYPE html>
@@ -14,5 +15,6 @@ import Navbar from '../storyblok/Navbar.astro';
   <body>
     <Navbar />
     <slot />
+    <Footer />
   </body>
 </html>
