--- a/src/storyblok/Navbar.astro
+++ b/src/storyblok/Navbar.astro
@@ -30,4 +30,7 @@ const { stories: pages } = data;
     font-weight: 600;
     margin-right: 35px;
   }
+  a:hover {
+    text-decoration: underline;
+  }
 </style>
