--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -58,11 +58,18 @@ const socialsIcons = {
     margin-bottom: 20px;
   }
   ul {
+    list-style: none;
     display: flex;
   }
   li {
     font-size: 16px;
     margin-right: 25px;
+  }
+  a {
+    text-decoration: none;
+  }
+  a:visited {
+    color: inherit;
   }
   a:hover {
     text-decoration: underline;
