--- a/src/storyblok/ImagePost.astro
+++ b/src/storyblok/ImagePost.astro
@@ -32,7 +32,7 @@ const htmlDescription = renderRichText(description);
 <style>
   .container {
     margin: 30px;
-    width: 200px;
+    width: 220px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -41,9 +41,11 @@ const htmlDescription = renderRichText(description);
   .img-container {
     position: relative;
     height: 300px;
+    width: 100%;
   }
   .img-container > img {
     height: 100%;
+    width: 100%;
     object-fit: cover;
     border-radius: 8px;
   }
@@ -72,6 +74,8 @@ const htmlDescription = renderRichText(description);
   }
   .post-title {
     font-weight: 800;
+    font-size: 18px;
+    margin: 0;
   }
   .instagram-logo {
     width: 24px;
