--- a/src/storyblok/Navbar.astro
+++ b/src/storyblok/Navbar.astro
@@ -24,11 +24,18 @@ const { stories: pages } = data;
   ul {
     display: flex;
     padding: 15px 30px;
+    list-style: none;
   }
   li {
     font-size: 18px;
     font-weight: 600;
     margin-right: 35px;
+  }
+  a {
+    text-decoration: none;
+  }
+  a:visited {
+    color: inherit;
   }
   a:hover {
     text-decoration: underline;
