replace instagram logo with a better one

--- a/src/storyblok/ImagePost.astro
+++ b/src/storyblok/ImagePost.astro
@@ -1,6 +1,6 @@
 ---
 import { renderRichText } from '@storyblok/astro';
-import instagramLogo from '../assets/instagram-logo.svg';
+import instagramLogo from '../assets/instagram-logo-white.svg';
 
 const { post } = Astro.props;
 
