--- a/src/components/ImageTile.astro
+++ b/src/components/ImageTile.astro
@@ -1,28 +1,22 @@
 ---
-import { renderRichText, storyblokEditable } from '@storyblok/astro';
-import instagramLogo from '../assets/instagram-logo-white.svg';
+import { renderRichText } from '@storyblok/astro';
 
-const { blok } = Astro.props;
+const { blok, slug } = Astro.props;
 
 const {
-  title, image, description, instagramLink,
+  title, image, description,
 } = blok;
 
 const htmlDescription = renderRichText(description);
 ---
 
-<div class='container' {...storyblokEditable(blok)}>
-  <div class='img-container'>
+<div class='container'>
+  <a href={slug} class='img-container'>
     <img src={image.filename} />
     <div class='overlay-container'>
       <h1 class='post-title'>{title}</h1>
-      {!!instagramLink && !!instagramLink.url && (
-        <a href={instagramLink.url} target='_blank' rel='noreferrer'>
-          <img src={instagramLogo} class='instagram-logo' />
-        </a>
-      )}
     </div>
-  </div>
+  </a>
   <div class='description-container'>
     <Fragment set:html={htmlDescription} />
   </div>
