get content version from env

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const date = new Date();
 const year = date.getFullYear();
 
 const { data } = await storyblokApi.get('cdn/stories', {
-  version: import.meta.env.DEV ? 'draft' : 'published',
+  version: import.meta.env.CONTENT_VERSION,
   content_type: 'page',
 });
 
