--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 
 const sbApi = useStoryblokApi();
 const { data } = await sbApi.get('cdn/stories/about', {
-  version: 'draft', // TODO change to published, perhaps based on env
+  version: import.meta.env.CONTENT_VERSION,
 });
 
 const { story } = data;
