--- a/src/storyblok/PostsList.astro
+++ b/src/storyblok/PostsList.astro
@@ -5,7 +5,7 @@ import ImageTile from '../components/ImageTile.astro';
 const storyblokApi = useStoryblokApi();
 
 const { data } = await storyblokApi.get('cdn/stories', {
-  version: import.meta.env.DEV ? 'draft' : 'published',
+  version: import.meta.env.CONTENT_VERSION,
   content_type: 'imagePost',
 });
 
