improve elements position and size

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -48,7 +48,7 @@ const socialsIcons = {
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 20px 5px 50px;
+    /* padding: 20px 5px 50px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
