--- a/src/storyblok/Navbar.astro
+++ b/src/storyblok/Navbar.astro
@@ -24,6 +24,7 @@ const { stories: pages } = data;
   ul {
     display: flex;
     padding: 15px 30px;
+    margin: 0;
     list-style: none;
   }
   li {
