--- a/src/storyblok/ImagePost.astro
+++ b/src/storyblok/ImagePost.astro
@@ -1,83 +1,77 @@
 ---
 import { renderRichText, storyblokEditable } from '@storyblok/astro';
-import instagramLogo from '../assets/instagram-logo-white.svg';
+import instagramLogo from '../assets/instagram-logo-gradient.svg';
+import PageTitle from './PageTitle.astro';
+import Tag from './Tag.astro';
 
 const { blok } = Astro.props;
 
 const {
-  title, image, description, instagramLink,
+  image, description, instagramLink, tags,
 } = blok;
 
 const htmlDescription = renderRichText(description);
 ---
 
-<div class='container' {...storyblokEditable(blok)}>
+<div {...storyblokEditable(blok)}>
+  <PageTitle blok={blok} />
+
   <div class='img-container'>
     <img src={image.filename} />
-    <div class='overlay-container'>
-      <h1 class='post-title'>{title}</h1>
-      {!!instagramLink && !!instagramLink.url && (
-        <a href={instagramLink.url} target='_blank' rel='noreferrer'>
-          <img src={instagramLogo} class='instagram-logo' />
-        </a>
-      )}
+  </div>
+
+  {!!instagramLink && !!instagramLink.url && (
+    <div class='ig-link-container'>
+      <a href={instagramLink.url} class='instagram-link' target='_blank' rel='noreferrer'>See this content on Instagram</a>
+      <img src={instagramLogo} class='instagram-logo' />
     </div>
-  </div>
-  <div class='description-container'>
-    <Fragment set:html={htmlDescription} />
-  </div>
+  )}
+
+  <Fragment set:html={htmlDescription} />
+
+  {!!tags && (
+    <p class='tags-list'>Tags:
+    <span class='tags-colour'>
+      {tags.map((t) => `#${t.tagName.replaceAll(/#/ig, '')}`).join(', ')}
+    </span>
+    </p>
+  )}
 </div>
 
 <style>
-  .container {
-    margin: 30px;
-    width: 220px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
   .img-container {
-    position: relative;
-    height: 300px;
+    min-height: 200px;
     width: 100%;
+    display: flex;
+    justify-content: center;
   }
   .img-container > img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+    max-height: 60vh;
+    max-width: 100%;
+    object-fit: contain;
     border-radius: 8px;
   }
-  .overlay-container {
-    position: absolute;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    height: 70px;
-    border-radius: 0 0 8px 8px;
-    padding: 8px 10px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
-    color: white;
-    font-size: 14px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-  }
-  .description-container {
-    font-size: 12px;
-    width: 100%;
-    height: 60px;
-    overflow: hidden;
-    /* text-overflow: ellipsis; */
-    /* white-space: nowrap; */
-  }
-  .post-title {
-    font-weight: 800;
-    font-size: 18px;
-    margin: 0;
+  .ig-link-container {
+    margin-bottom: 30px;
   }
   .instagram-logo {
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+  }
+  .instagram-link {
+    text-decoration: none;
+    color: inherit;
+  }
+  .instagram-link:hover {
+    cursor: pointer;
+    text-decoration: underline;
+  }
+  .tags-list {
+    margin-top: 50px;
+    font-size: 14px;
+  }
+  .tags-colour {
+    color: #888;
   }
 </style>
