--- a/src/storyblok/PageContent.astro
+++ b/src/storyblok/PageContent.astro
@@ -7,6 +7,6 @@ const { content } = blok;
 
 ---
 
-<div {...storyblokEditable(blok)}>
+<div {...storyblokEditable(blok)} class='main-text'>
   <RichTextRenderer richTextData={content} />
 </div>
