--- a/src/components/ImageTile.astro
+++ b/src/components/ImageTile.astro
@@ -25,7 +25,7 @@ const htmlDescription = renderRichText(description);
 <style>
   .container {
     margin: 30px;
-    width: 220px;
+    width: 250px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -33,7 +33,7 @@ const htmlDescription = renderRichText(description);
   }
   .img-container {
     position: relative;
-    height: 300px;
+    height: 400px;
     width: 100%;
   }
   .img-container > img {
@@ -58,12 +58,10 @@ const htmlDescription = renderRichText(description);
     align-items: flex-end;
   }
   .description-container {
-    font-size: 12px;
+    font-size: 14px;
     width: 100%;
     height: 60px;
     overflow: hidden;
-    /* text-overflow: ellipsis; */
-    /* white-space: nowrap; */
   }
   .post-title {
     font-weight: 800;
@@ -73,5 +71,19 @@ const htmlDescription = renderRichText(description);
   .instagram-logo {
     width: 24px;
     height: 24px;
+  }
+
+  @media only screen and (max-width: 600px) {
+    .container {
+      margin: 0;
+      margin-bottom: 10px;
+      width: 100%;
+    }
+    .img-container {
+      height: 600px;
+    }
+    .description-container {
+      font-size: 12px;
+    }
   }
 </style>
