--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -28,10 +28,17 @@ import './baseLayout.css';
   .outer-container {
     min-height: 100vh;
     position: relative;
+    margin: 0 40px;
   }
   .main-content {
     max-width: 800px;
     margin: 0 auto;
     padding-bottom: 12rem;
+  }
+
+  @media only screen and (max-width: 600px) {
+    .outer-container {
+      margin: 0 10px;
+    }
   }
 </style>
