--- a/src/storyblok/Navbar.astro
+++ b/src/storyblok/Navbar.astro
@@ -23,7 +23,7 @@ const { stories: pages } = data;
 <style>
   ul {
     display: flex;
-    padding: 15px 30px;
+    padding: 30px 0 15px 0;
     margin: 0;
     list-style: none;
   }
@@ -31,14 +31,5 @@ const { stories: pages } = data;
     font-size: 18px;
     font-weight: 600;
     margin-right: 35px;
-  }
-  a {
-    text-decoration: none;
-  }
-  a:visited {
-    color: inherit;
-  }
-  a:hover {
-    text-decoration: underline;
   }
 </style>
