fix links in footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,7 +25,7 @@ const socialsIcons = {
   <ul>
     <li><a href='/'>Home</a></li>
     {pages?.filter((p) => p.name !== 'Home').map((page) => (
-      <li><a href={page.slug}>{page.name}</a></li>
+      <li><a href={`/${page.slug}`}>{page.name}</a></li>
     ))}
   </ul>
 
