--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@ const { data } = await storyblokApi.get('cdn/stories', {
 const { stories: pages } = data;
 
 const socialsIcons = {
-  Instagram: instagramLogo,
+  Instagram: instagramLogo.src,
 };
 
 ---
