--- a/src/storyblok/ImagePost.astro
+++ b/src/storyblok/ImagePost.astro
@@ -22,7 +22,7 @@ const htmlDescription = renderRichText(description);
   {!!instagramLink && !!instagramLink.url && (
     <div class='ig-link-container'>
       <a href={instagramLink.url} class='instagram-link' target='_blank' rel='noreferrer'>See this content on Instagram</a>
-      <img src={instagramLogo} class='instagram-logo' />
+      <img src={instagramLogo.src} class='instagram-logo' />
     </div>
   )}
 
