use Image component in ImagePost

--- a/src/storyblok/ImagePost.astro
+++ b/src/storyblok/ImagePost.astro
@@ -1,14 +1,14 @@
 ---
 import { renderRichText, storyblokEditable } from '@storyblok/astro';
+import { Image } from 'astro:assets';
 import instagramLogo from '../assets/instagram-logo-gradient.svg';
 import PageTitle from './PageTitle.astro';
 
 const { blok } = Astro.props;
 
 const {
-  image, description, instagramLink, tags,
+  image, description, instagramLink, tags, alt,
 } = blok;
-
 const htmlDescription = renderRichText(description);
 ---
 
@@ -16,7 +16,13 @@ const htmlDescription = renderRichText(description);
   <PageTitle blok={blok} />
 
   <div class='img-container'>
-    <img src={image.filename} />
+    <Image
+      src={image.filename}
+      alt={alt}
+      width={800}
+      height={800}
+      quality={100}
+    />
   </div>
 
   {!!instagramLink && !!instagramLink.url && (
