--- a/src/storyblok/ImagePost.astro
+++ b/src/storyblok/ImagePost.astro
@@ -48,6 +48,7 @@ const htmlDescription = renderRichText(description);
 <style>
   .img-container {
     min-height: 200px;
+    max-height: 60vh;
     width: 100%;
     display: flex;
     justify-content: center;
